Fix indicateurs transversaux

--- a/client/dev/partials/indicators/reporting.html
+++ b/client/dev/partials/indicators/reporting.html
@@ -127,7 +127,7 @@
 			</td>
 			<td>{{row.baseline}}{{row.unit}}</td>
 			<td>{{row.target}}{{row.unit}}</td>
-			<td ng-repeat="col in row.cols track by $index" reporting-field></td>
+			<td ng-repeat="col in row.cols track by $index" indicator-reporting-field></td>
 		</tr>
 	</tbody>
 </table>
