Rename menu elements to split activity/result follow-up

--- a/client/dev/partials/projects/menu.html
+++ b/client/dev/partials/projects/menu.html
@@ -79,7 +79,7 @@
 
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h4 class="panel-title" translate="project.indicators_management"></h4>
+					<h4 class="panel-title" translate="project.result_management"></h4>
 				</div>
 
 				<div class="panel-collapse">
