Finish implementing pivot tables

--- a/client/dev/partials/projects/activity/collection-form-edition.html
+++ b/client/dev/partials/projects/activity/collection-form-edition.html
@@ -303,7 +303,7 @@
 					<a ng-click="newVariable(section.elements)"
 					   class="btn btn-xs btn-default" 
 					   style="width: 100%"
-					   translate="project.new_variable"></a>
+					   translate="project.add_variable"></a>
 				</td>
 
 				<td ng-if="section.elements.length === 0">
@@ -322,7 +322,7 @@
 		<tbody acl-has-project-role="owner">
 			<tr>
 				<td colspan="{{maxPartitions + 6}}" style="text-align: center">
-					<a ng-click="newSection(form.sections)" class="btn btn-xs btn-default" style="width: 100%" translate="project.new_section"></a>
+					<a ng-click="newSection(form.sections)" class="btn btn-xs btn-default" style="width: 100%" translate="project.add_section"></a>
 				</td>
 			</tr>
 		</tbody>
