--- a/client/dev/partials/projects/menu.html
+++ b/client/dev/partials/projects/menu.html
@@ -65,13 +65,13 @@
 							<span translate="shared.reporting_general"></span>
 						</a>
 
-						<a ui-sref="main.project.detailed_activity_reporting"
+						<a ui-sref="main.project.olap"
 						   ui-sref-active="active"
 						   class="list-group-item"
 						   disable-if="!project._id">
 
-							<i class="fa fa-bar-chart fa-fw"></i>
-							<span translate="shared.reporting_by_variable"></span>
+							<i class="fa fa-table fa-fw"></i>
+							<span translate="project.pivot_table"></span>
 						</a>
 					</div>
 				</div>
