--- a/client/dev/partials/projects/indicators/edition-modal.html
+++ b/client/dev/partials/projects/indicators/edition-modal.html
@@ -82,6 +82,13 @@
 
 		<div class="well well-sm">
 
+			<div class="form-group">
+				<label for="colorize-input" class="col-sm-2 control-label" translate="shared.colorize"></label>
+				<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.colorize">
+					<input id="colorize-input" type="checkbox" ng-model="planning.colorize" />
+				</div>
+			</div>
+
 			<div class="form-group" show-errors>
 				<label for="baseline-input" class="col-sm-2 control-label" translate="project.baseline"></label>
 				<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="planning.baseline">
