Make olap table downloadable

--- a/client/dev/partials/projects/activity/_olap_grid.html
+++ b/client/dev/partials/projects/activity/_olap_grid.html
@@ -6,7 +6,7 @@
 	}
 </style>
 
-<table class="table table-bordered table-condensed data-grid">
+<table class="table table-bordered table-condensed data-grid" id="reporting">
 	<thead>
 		<tr ng-repeat="row in grid.header">
 			<th colspan="{{grid.body[0].headerCols.length}}"
