Allow clicking on names to enable graphs on stats

--- a/client/dev/css/app.css
+++ b/client/dev/css/app.css
@@ -204,7 +204,7 @@ textarea {
     font-size: 12px;
   }
 
-  table.project-reporting label {
+  #reporting label {
     font-weight: normal;
   }
 
